--- a/espRcCar/controll.html
+++ b/espRcCar/controll.html
@@ -3,36 +3,48 @@
   </head>
   <!-- <script src="webtcp-master/lib/client/webtcp-0.0.1.min.js"></script> -->
   <script type="text/javascript">
-  var wsUri = 'ws://192.168.1.222:81';
+  var wsUri = 'ws://192.168.1.113:81';
+  // var websocket;
   websocket = new WebSocket(wsUri);
-  websocket.onopen = function(evt) {
-    // websocket.send("Message to send");
-    console.log("CONNECTED");
-  };
+  // websocket.onopen = function(evt) {
+  //   // websocket.send("Message to send");
+  //   console.log("CONNECTED");
+  // };
 
   document.addEventListener('keydown', function(event) {
-    websocket.send('m(0,0):');
     //right
     if(event.keyCode == 37) {
-      // connection.send('m(0,0):');
+      websocket.send('m(0,0):');
       websocket.send('m(-50,50):');
     }
     //left
     else if(event.keyCode == 39) {
-      // connection.send('m(0,0):');
+      websocket.send('m(0,0):');
       websocket.send('m(50,-50):');
     }
+    //up
     else if(event.keyCode == 38) {
-      // connection.send('m(0,0):');
+      websocket.send('m(0,0):');
       websocket.send('m(50,50):');
     }
+    //down
     else if(event.keyCode == 40) {
-      // connection.send('m(0,0):');
+      websocket.send('m(0,0):');
       websocket.send('m(-50,-50):');
     }
+    //space bar
     else if(event.keyCode == 32) {
-      // connection.send('m(0,0):');
       websocket.send('m(0,0):');
+    }
+    //enter
+    else if(event.keyCode == 13) {
+      websocket = new WebSocket(wsUri);
+      // websocket.onopen();
+    }
+    //esc
+    else if(event.keyCode == 27) {
+      websocket.send('m(0,0):');
+      websocket.close();
     }
 
   });
